Fix select input on iOS

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ input[type="date"] {
 }
 
 select {
-    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
 }
 
 input[type="submit"] {
